--- a/setup-node/action.yaml
+++ b/setup-node/action.yaml
@@ -23,4 +23,13 @@ runs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ inputs.node-version }}
-        cache: "pnpm"
+    - name: Get cache path
+      id: cache
+      shell: bash
+      run: echo "dir=$(pnpm store path)" >> $GITHUB_OUTPUT
+    - uses: actions/cache@v4.0.2
+      with:
+        path: ${{ steps.cache.outputs.dir }}
+        key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-${{ steps.package-manager.outputs.name }}-
