--- a/update-pr-comment/action.yaml
+++ b/update-pr-comment/action.yaml
@@ -49,3 +49,24 @@ runs:
             body: newDescription
           });
         github-token: ${{ inputs.github_token }}
+    - name: Check squash merge settings
+      uses: actions/github-script@v7
+      with:
+        script: |
+          const repo = await github.rest.repos.get({
+            owner: context.repo.owner,
+            repo: context.repo.repo
+          });
+
+          const mergeSettings = repo.data;
+          const isSquashEnabled = mergeSettings.allow_squash_merge;
+          const squashMergeCommitTitle = mergeSettings.squash_merge_commit_title;
+          const squashMergeCommitMessage = mergeSettings.squash_merge_commit_message;
+
+          if (isSquashEnabled &&
+              squashMergeCommitTitle === 'PR_TITLE' &&
+              squashMergeCommitMessage === 'PR_BODY') {
+            console.log('Squash merge is enabled and configured correctly.');
+          } else {
+            throw new Error('Squash merge is not correctly configured.');
+          }
