--- a/update-pr-comment/action.yaml
+++ b/update-pr-comment/action.yaml
@@ -15,11 +15,15 @@ runs:
       run: |
         AUTO_MERGE_STATUS=$(gh pr view ${{ github.event.pull_request.number }} --json autoMergeRequest --jq '.autoMergeRequest != null')
         echo "AUTO_MERGE_STATUS=$AUTO_MERGE_STATUS" >> $GITHUB_ENV
+      env:
+        GH_TOKEN: ${{ inputs.GITHUB_TOKEN }}
     - name: Disable auto-merge if enabled
       if: env.AUTO_MERGE_STATUS == 'true'
       shell: bash
       run: |
         gh pr merge --disable-auto ${{ github.event.pull_request.number }}
+      env:
+        GH_TOKEN: ${{ inputs.GITHUB_TOKEN }}
     - name: Set the output
       uses: actions/github-script@v7
       with:
@@ -85,3 +89,5 @@ runs:
       shell: bash
       run: |
         gh pr merge --auto ${{ github.event.pull_request.number }}
+      env:
+        GH_TOKEN: ${{ inputs.GITHUB_TOKEN }}
