--- a/update-pr-comment/action.yaml
+++ b/update-pr-comment/action.yaml
@@ -88,6 +88,6 @@ runs:
       if: env.AUTO_MERGE_STATUS == 'true'
       shell: bash
       run: |
-        gh pr merge --auto ${{ github.event.pull_request.number }}
+        gh pr merge --merge --auto ${{ github.event.pull_request.number }}
       env:
         GH_TOKEN: ${{ inputs.GITHUB_TOKEN }}
