ci: fix releaser

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,3 +23,5 @@ jobs:
       - name: Release please
         uses: googleapis/release-please-action@v4
         id: release
+        with:
+          release-type: simple
