--- a/update-pr-comment/action.yaml
+++ b/update-pr-comment/action.yaml
@@ -2,6 +2,10 @@ name: PR Commit Message Update
 description: Update PR commit message with commit logs
 
 inputs:
+  ignores:
+    description: "A list of users to ignore."
+    default: "github-actions[bot], dependabot[bot], renovate[bot]"
+    required: false
   GITHUB_TOKEN:
     description: "GITHUB_TOKEN."
     default: "${{ github.token }}"
@@ -10,8 +14,30 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Clean IGNORES input
+      id: clean_ignores
+      shell: bash
+      run: |
+        ignores=$(echo "${{ inputs.ignores }}" | tr -d '\n' | tr ',' '\n' | sed 's/^ *//g' | sed 's/ *$//g' | tr '\n' ',')
+        echo "ignores=${ignores}" >> "${GITHUB_OUTPUT}"
+    - name: Check if PR user is in ignores list
+      id: check_user
+      shell: bash
+      run: |
+        pr_user="${{ github.event.pull_request.user.login }}"
+
+        IFS=',' read -r -a ignore_array <<< "${{ steps.clean_ignores.outputs.ignores }}"
+
+        if [[ " ${ignore_array[@]} " =~ " ${pr_user} " ]]; then
+          echo "Skipping job for user $pr_user"
+          echo "skip=true" >> "${GITHUB_OUTPUT}"
+        else
+          echo "Proceeding with the job."
+          echo "skip=false" >> "${GITHUB_OUTPUT}"
+        fi
     - name: Set the output
       uses: actions/github-script@v7
+      if: steps.check_user.outputs.skip != 'true'
       with:
         script: |
           const { data: pr } = await github.rest.pulls.get({
@@ -51,6 +77,7 @@ runs:
         github-token: ${{ inputs.github_token }}
     - name: Check squash merge settings
       uses: actions/github-script@v7
+      if: steps.check_user.outputs.skip != 'true'
       with:
         script: |
           const repo = await github.rest.repos.get({
