--- a/matrix-output-write/actions.yml
+++ b/matrix-output-write/actions.yml
@@ -1,22 +1,22 @@
-name: 'Matrix outputs - write'
-description: 'Write outputs for matrix'
+name: Matrix outputs - write
+description: Write outputs for matrix
 author: shiron4710.dev@gmail.com
 branding:
-  icon: 'chevrons-up'
-  color: 'white'
+  icon: chevrons-up
+  color: white
 inputs:
   matrix-step-name:
     required: false
-    description: "Matrix step name"
+    description: Matrix step name
   matrix-key:
     required: false
-    description: "Matrix key"
+    description: Matrix key
   outputs:
     required: false
-    description: "YAML structured map of outputs"
+    description: YAML structured map of outputs
 outputs:
   result:
-    description: "Outputs result (Deprecated!!!)"
+    description: Outputs result (Deprecated!!!)
 runs:
-  using: "node20"
-  main: "index.js"
+  using: node20
+  main: index.js
