ci(matrix-output-write): add releaser

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,3 +79,6 @@ jobs:
       - name: Run test
         run: |
           pnpm run test
+      - name: Run build
+        run: |
+          pnpm run build
