--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
     timeout-minutes: 10
     outputs:
       release-created: ${{ steps.release.outputs.release_created }}
+      pr: ${{ steps.release.outputs.pr }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -25,6 +26,15 @@ jobs:
         id: release
         with:
           release-type: simple
+  build:
+    runs-on: ubuntu-latest
+    needs: release-please
+    timeout-minutes: 10
+    if: ${{ needs.release-please.outputs.pr != '' }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ fromJson(needs.release-please.outputs.pr).headBranchName }}
       - uses: shiron-dev/actions/setup-node@80f5f1513667e3070306b37e57021218addf46cb # v1.1.0
       - name: Run install
         working-directory: ./matrix-output-write
@@ -36,10 +46,13 @@ jobs:
           pnpm run build
       - name: Commit changes
         run: |
+          git add -f matrix-output-write/dist
+          if git diff --cached --quiet; then
+            echo "No changes to the output. Exiting."
+            exit 0
+          fi
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git switch ${{ fromJson(steps.release.outputs.pr).headBranchName }}
-          git add .
-          git status
           git commit -m "chore: build matrix-output-write"
           git push
+          echo "Changes committed"
