--- a/matrix-output-write/tsconfig.json
+++ b/matrix-output-write/tsconfig.json
@@ -1,18 +1,18 @@
 {
   "compilerOptions": {
     "target": "es2020",
-    "module": "es2022",
     "lib": ["ESNext"],
+    "module": "es2022",
     "moduleResolution": "node",
+    "allowJs": true,
     "strict": true,
-    "skipLibCheck": true,
     "declaration": true,
-    "pretty": true,
     "newLine": "lf",
     "outDir": "build",
     "esModuleInterop": true,
-    "allowJs": true
+    "skipLibCheck": true,
+    "pretty": true
   },
-  "exclude": ["node_modules", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts", "test/**/*.ts"]
+  "include": ["src/**/*.ts", "test/**/*.ts"],
+  "exclude": ["node_modules", "src/**/*.test.ts"]
 }
