--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,29 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>shiron-dev/renovate-config"]
+  "extends": [
+    "github>shiron-dev/renovate-config"
+  ],
+  "customManagers": [
+    {
+      "customType": "regex",
+      "fileMatch": [
+        "action.yaml"
+      ],
+      "matchStrings": [
+        "\"pnpm version\"\\s*default:\\s*\"(?<currentValue>.*)\""
+      ],
+      "datasourceTemplate": "github-releases",
+      "depNameTemplate": "pnpm/pnpm",
+      "extractVersionTemplate": "v(?<version>.*)"
+    }
+  ],
+  "packageRules": [
+    {
+      "matchPackageNames": [
+        "pnpm"
+      ],
+      "semanticCommitType": "fix",
+      "automerge": false
+    }
+  ]
 }
