feat(action): add install-and-archive GitHub Action
This commit introduces a new GitHub Action for installing packages and archiving installed files. The action allows users to specify installation scripts, archive paths, and directories to monitor for changes. Detailed usage instructions are provided in the README.

--- a/actions-use-apt-tools/action.yaml
+++ b/actions-use-apt-tools/action.yaml
@@ -84,7 +84,7 @@ runs:
         inputs.method == 'timestamp' &&
         steps.setup.outputs.cache != 'no' &&
         steps.cache.outputs.cache-hit != 'true'
-      uses: tecolicom/actions-install-and-archive@v1
+      uses: shiron-dev/actions/actions-install-and-archive
       with:
         run: apt-get install -y ${{ inputs.tools }}
         archive: ${{ steps.setup.outputs.archive }}
