--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,4 +122,5 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
+      - uses: actions/checkout@v6
       - uses: ./renovate-deps-comment
