--- a/renovate-deps-comment/action.yml
+++ b/renovate-deps-comment/action.yml
@@ -20,6 +20,8 @@ runs:
   steps:
     - uses: actions/checkout@v6
     - uses: shiron-dev/actions/setup-node@9e2029b6bf55740748a5eace94dc93d97a1496ba # v1.5.2
+      with:
+        node-version: "24.11.0"
     - name: Dry-run Renovate
       id: renovate-dry-run
       run: |
