feat(ci): add renovate-deps-comment job to CI workflow (#295)
add renovate-deps-comment job to CI workflow

--- commit logs ---
* feat(ci): add renovate-deps-comment job to CI workflow



* chore(ci): update checkout action to v6 in CI workflow



* chore(ci): specify Node.js version 24.11.0 in renovate-deps-comment
action



* fix(action): update environment variables for dependency checks in
renovate-deps-comment action



* refactor(action): streamline logging in renovate-deps-comment action
by using tee for output



* chore(ci): duplicate checkout action step in CI workflow



* chore(ci): remove duplicate checkout action step from CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
       - matrix-output-write-test
       - post-step-check
       - github-app-token-check
+      - renovate-deps-comment
     steps:
       - name: All status check
         run: echo "All status check passed"
@@ -117,3 +118,9 @@ jobs:
         run: |
           echo "GITHUB_APP_TOKEN=${{ steps.github-app-token.outputs.token }}" >> "${GITHUB_ENV}"
           GITHUB_TOKEN="${{ steps.github-app-token.outputs.token }}" gh pr status
+  renovate-deps-comment:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v6
+      - uses: ./renovate-deps-comment
