--- a/renovate-deps-comment/action.yml
+++ b/renovate-deps-comment/action.yml
@@ -154,6 +154,7 @@ runs:
 
     - name: Build comment
       id: build-comment
+      if: ${{ steps.deps-diff.outputs.diff != '' }}
       env:
         DEPS_COMMENT: ${{ steps.check-deps.outputs.comment }}
         DEPS_DIFF: ${{ steps.deps-diff.outputs.diff }}
@@ -175,7 +176,7 @@ runs:
       shell: bash
 
     - name: Post comment
-      if: ${{ steps.check-deps.outputs.comment != '' }}
+      if: ${{ steps.deps-diff.outputs.diff != '' }}
       uses: marocchino/sticky-pull-request-comment@773744901bac0e8cbb5a0dc842800d45e9b2b405 # v2.9.4
       with:
         number: ${{ inputs.pr-number || github.event.pull_request.number }}
